fix login function

--- a/fe/admin.html
+++ b/fe/admin.html
@@ -17,7 +17,7 @@
         <a href="#" data-page="category.html">Danh mục</a>
         <a href="#" data-page="brand.html">Thương hiệu</a>
         <a href="#" data-page="order.html">Đơn hàng</a>
-        <a href="#" data-page="user.html">Người dùng</a>
+        <a href="#" data-page="user.html">Tài khoản</a>
     </div>
 
     <!-- Main content -->
