--- a/fe/homepage.html
+++ b/fe/homepage.html
@@ -65,9 +65,9 @@
                         <i class="fas fa-user"></i> Hi, <span id="userFullName"></span>
                     </a>
                     <ul class="dropdown-menu dropdown-menu-end profile-dropdown-content" aria-labelledby="account-link">
-                        <li><a class="dropdown-item" href="profile.html">Profile</a></li>
+                        <li><a class="dropdown-item" href="profile.html">Thông tin cá nhân</a></li>
                         <li><hr class="dropdown-divider"></li>
-                        <li><a class="dropdown-item" href="index.html" id="logoutBtn">Logout</a></li>
+                        <li><a class="dropdown-item" href="index.html" id="logoutBtn">Đăng xuất</a></li>
                     </ul>
                 </div>
             </div>
