--- a/fe/product-dt.html
+++ b/fe/product-dt.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Product Details</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="/css/product-detail.css">
 </head>
 <body>
@@ -42,7 +43,25 @@
                     <div class="info-row">
                         <strong>Trạng thái:</strong> <span id="productStatus"></span>
                     </div>
+                    <div class="info-row mt-3">
+                        <div class="d-flex align-items-center">
+                            <strong>Số lượng:</strong>
+                            <div class="input-group ml-2" style="width: 150px;">
+                                <button class="btn btn-outline-secondary" type="button" onclick="decrementQuantity()">-</button>
+                                <input type="number" class="form-control text-center" id="quantity" value="1" min="1">
+                                <button class="btn btn-outline-secondary" type="button" onclick="incrementQuantity()">+</button>
+                            </div>
+                        </div>
+                    </div>
+                    
+                    <div class="mt-3">
+                        <button class="btn btn-danger" onclick="addToCart()">
+                            <i class="fas fa-shopping-cart"></i> Thêm vào giỏ hàng
+                        </button>
+                    </div>
+
                 </div>
+
 
                 <hr class="divider">
 
@@ -55,6 +74,52 @@
             </div>
         </div>
     </div>
+
+    <script>
+        function incrementQuantity() {
+        const input = document.getElementById('quantity');
+        input.value = parseInt(input.value) + 1;
+    }
+
+        function decrementQuantity() {
+            const input = document.getElementById('quantity');
+            if (parseInt(input.value) > 1) {
+            input.value = parseInt(input.value) - 1;
+            }
+    }
+
+        function addToCart() {
+            const token = localStorage.getItem('authToken');
+            if (!token) {
+            alert('Vui lòng đăng nhập để thêm sản phẩm vào giỏ hàng');
+            window.location.href = '/login.html';
+            return;
+        }
+
+        const productId = window.location.pathname.split('/')[2];
+        const quantity = document.getElementById('quantity').value;
+
+    fetch('http://localhost:5000/api/cart/add', {
+        method: 'POST',
+        headers: {
+            'Content-Type': 'application/json',
+            'x-auth-token': token
+        },
+        body: JSON.stringify({
+            productId: productId,
+            quantity: parseInt(quantity)
+        })
+    })
+    .then(response => response.json())
+    .then(data => {
+        alert('Sản phẩm đã được thêm vào giỏ hàng!');
+    })
+    .catch(error => {
+        console.error('Error adding to cart:', error);
+        alert('Có lỗi xảy ra khi thêm vào giỏ hàng');
+    });
+}
+    </script>
 
     <script>
         document.addEventListener("DOMContentLoaded", function () {
